--- a/neural_network/fluid_dynamics/body_fitted_cylinder_100Re/Pressure/LSTMProjectParameters.json
+++ b/neural_network/fluid_dynamics/body_fitted_cylinder_100Re/Pressure/LSTMProjectParameters.json
@@ -46,7 +46,7 @@
             "parameters"   :{
                 "input_file_name"          : "data//training_in",
                 "output_file_name"         : "data//training_out",
-                "format"                   : "npy",
+                "format"                   : "pkl",
                 "input_log_name" 	    : "input_preprocessing.json",
                 "output_log_name" 	    : "output_preprocessing.json"
             }
@@ -62,7 +62,7 @@
             "layer_parameters"    :{
             "layer_name"          : "input",
             "input_to_recurrent"  : true,
-                "data_input"      : "data//training_in.npy"  
+                "data_input"      : "data//training_in.pkl"  
             }  
         }},   
         {
@@ -94,7 +94,7 @@
             "layer_type"                   : "dense_layer",
             "layer_parameters"             :{
                 "output_layer" 	     : true,
-                "data_output"		     : "data//training_out.npy",
+                "data_output"		     : "data//training_out.pkl",
                 "activation"		     : "linear"
         }}},  
         {
@@ -140,8 +140,8 @@
         "python_module" : "train_saved_model_process",
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
-            "data_input"          : "data//training_in.npy",
-            "data_output"         : "data//training_out.npy",
+            "data_input"          : "data//training_in.pkl",
+            "data_output"         : "data//training_out.pkl",
             "model"              : "my_model",
             "recurrent"	  : true,
             "epochs"             : 1000,
@@ -167,8 +167,8 @@
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
             "model"               : "my_model",
-            "input_file"          : "data/training_in.npy",
-            "target_file"         : "data/training_out.npy",
+            "input_file"          : "data/training_in.pkl",
+            "target_file"         : "data/training_out.pkl",
             "timesteps"           : 500,
             "lookback"            : 5,
             "echo"                : 0,
@@ -180,7 +180,7 @@
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
             "predictions_file"    : "data//predictions.npy",
-            "target_file"         : "data//training_out.npy",
+            "target_file"         : "data//training_out.pkl",
             "input_variable"      : "Time",
             "variables"           : ["Pressure"],
             "axis"                : "plot",
