--- a/co_simulation/CoSim_DevExamples/mok_fsi_CSM_beam/ProjectParametersCSM.json
+++ b/co_simulation/CoSim_DevExamples/mok_fsi_CSM_beam/ProjectParametersCSM.json
@@ -1,19 +1,21 @@
 {
     "problem_data"             : {
         "problem_name"    : "Mok_CSM",
-        "model_part_name" : "Structure",
-        "domain_size"     : 3,
         "parallel_type"   : "OpenMP",
-        "time_step"       : 0.1,
         "start_time"      : 0.0,
         "end_time"        : 15,
         "echo_level"      : 0
     },
     "solver_settings"          : {
         "solver_type"                        : "Dynamic",
+        "model_part_name" 					 : "Structure",
+        "domain_size"    		  			 : 3,
         "echo_level"                         : 0,
         "analysis_type"                      : "linear",
         "time_integration_method"            : "implicit",
+        "time_stepping" : {
+            "time_step"       : 0.1
+        },
         "scheme_type"                        : "newmark",
         "model_import_settings"              : {
             "input_type"     : "mdpa",
@@ -31,6 +33,7 @@
         "processes_sub_model_part_list"      : ["DISPLACEMENT_Boundary","ROTATION_Boundary","GENERIC_Beam"],
         "rotation_dofs"                      : true
     },
+    "processes":{
     "constraints_process_list" : [{
         "python_module" : "assign_vector_variable_process",
         "kratos_module" : "KratosMultiphysics",
@@ -38,7 +41,7 @@
         "process_name"  : "AssignVectorVariableProcess",
         "Parameters"    : {
             "mesh_id"         : 0,
-            "model_part_name" : "DISPLACEMENT_Boundary",
+            "model_part_name" : "Structure.DISPLACEMENT_Boundary",
             "variable_name"   : "DISPLACEMENT",
             "constrained"      : [true, true, true],
             "value"           : [0.0,0.0,0.0]
@@ -52,7 +55,7 @@
         "process_name"  : "AssignVectorVariableProcess",
         "Parameters"    : {
             "mesh_id"         : 0,
-            "model_part_name" : "GENERIC_Beam",
+            "model_part_name" : "Structure.GENERIC_Beam",
             "variable_name"   : "DISPLACEMENT",
             "constrained"      : [false, false, false],
             "value"           : [0.0,0.0,0.0]
@@ -66,7 +69,7 @@
         "process_name"  : "AssignVectorVariableProcess",
         "Parameters"    : {
             "mesh_id"         : 0,
-            "model_part_name" : "ROTATION_Boundary",
+            "model_part_name" : "Structure.ROTATION_Boundary",
             "variable_name"   : "ROTATION",
             "constrained"      : [true, true, true],
             "value"           : [0.0,0.0,0.0]
@@ -81,7 +84,7 @@
         "process_name"          : "ApplyConstantVectorValueProcess",
         "Parameters"            : {
             "mesh_id"         : 0,
-            "model_part_name" : "GENERIC_Beam",
+            "model_part_name" : "Structure.GENERIC_Beam",
             "variable_name"   : "VOLUME_ACCELERATION",
             "modulus"          : 0.0,
             "direction"       : [0.0,-1.0,0.0]
@@ -95,7 +98,7 @@
         "process_name"          : "ApplyConstantVectorValueProcess",
         "Parameters"            : {
             "mesh_id"         : 0,
-            "model_part_name" : "GENERIC_Beam",
+            "model_part_name" : "Structure.GENERIC_Beam",
             "variable_name"   : "POINT_LOAD",
             "modulus"          : 0.00,
             "direction"       : [1.0,1.0,1.0]
@@ -114,25 +117,45 @@
             "output_variables" : ["DISPLACEMENT"],
             "entity_type"      : "node"
         }
-    }],
-    "output_configuration"     : {
-        "result_file_configuration" : {
-            "gidpost_flags"       : {
-                "GiDPostMode"           : "GiD_PostBinary",
-                "WriteDeformedMeshFlag" : "WriteDeformed",
-                "WriteConditionsFlag"   : "WriteConditions",
-                "MultiFileFlag"         : "SingleFile"
-            },
-            "file_label"          : "step",
-            "output_control_type" : "step",
-            "output_frequency"    : 1.0,
-            "body_output"         : true,
-            "node_output"         : true,
-            "skin_output"         : false,
-            "plane_output"        : [],
-            "nodal_results"       : ["DISPLACEMENT","POINT_LOAD","VELOCITY","ACCELERATION"],
-            "gauss_point_results" : []
-        },
-        "point_data_configuration"  : []
+    }]
+    },
+    "output_processes" : {
+    	"data_generation":[{
+			"python_module" : "data_generator_process",
+			"kratos_module" : "NeuralNetworkApplication",
+			"Parameters" 	: {
+            "help"                     : "This process generates the data series for the neural network training and testing",
+            "model_part_name"          : "Structure.GENERIC_Beam",
+            "interval"                 : [0.0, "End"],
+            "write_output_file"        : true,
+            "input_variables"          : ["POINT_LOAD"],
+            "input_sources"            : ["solution_step"],
+            "input_model_part"         : "Structure.GENERIC_Beam",
+            "output_variables"         : ["DISPLACEMENT_X","DISPLACEMENT_Y"],
+            "output_sources"           : ["solution_step","solution_step"],
+            "perturbate_variables"     : [],
+            "random_distribution"      : ["normal"],
+            "random_parameters"        : [[0,0.1]],
+            "print_format"             : ".8f",
+            "output_format"            : "ascii",
+            "training_file_settings": {
+                    "input_file_name"  : "training_in_raw",
+                    "output_file_name" : "training_out_raw",
+                    "file_format"      : "dat",
+                    "output_path"      : "data/"
+            }}
+        }],
+        "vtk_output" : [{
+            "python_module" : "vtk_output_process",
+            "kratos_module" : "KratosMultiphysics",
+            "Parameters"    : {
+                "model_part_name"                    : "Structure",
+                "file_format"                        : "binary",
+                "output_sub_model_parts"             : false,
+                "output_interval"                    : 1,
+                "nodal_solution_step_data_variables" : ["DISPLACEMENT","ROTATION","POINT_LOAD","POINT_MOMENT"],
+                "gauss_point_variables_extrapolated_to_nodes" : []
+            }
+        }]
     }
 }
