--- a/co_simulation/CoSim_DevExamples/mok_fsi_CSM_beam/project_parameters_cosim_mok_fsi.json
+++ b/co_simulation/CoSim_DevExamples/mok_fsi_CSM_beam/project_parameters_cosim_mok_fsi.json
@@ -1,255 +1,196 @@
 {
     "problem_data" :
     {
+    	"problem_name"    : "Mok_CSM",
+        "parallel_type"   : "OpenMP",
         "start_time"   : 0.0,
         "end_time"     : 15.0,
-        "print_colors" : true
+        "print_colors" : true,
+        "echo"		: 0
     },
     "solver_settings" :
     {
-        "solver_type" : "gauss_seidel_strong_coupling",
+        "type" : "coupled_solvers.gauss_seidel_strong",
         "echo_level" : 0,
         "num_coupling_iterations" : 10,
-        "start_coupling_time" : 0.0,
-        "predictor_settings" :
-        {
-            "predictor_type" : "linear_derivative_based",
-            "io_type"        : "kratos_signal",
-            "data_list"      : 
-            [
-                {
-                    "from_solver": "structure",
-                    "data_name"  : "front_disp"
-                },
-                {
-                    "from_solver": "structure",
-                    "data_name"  : "top_disp"
-                },
-                {
-                    "from_solver": "structure",
-                    "data_name"  : "back_disp"
+        "predictors" : [
+            {
+                "type"                 : "linear_derivative_based",
+                "solver"               : "structure",
+                "data_name"            : "top_disp",
+                "derivative_data_name" : "top_vel"
+            }
+        ],
+        "convergence_accelerators" : [
+            {
+                "type"      : "mvqn",
+                "solver"    : "fluid",
+                "data_name" : "top_disp"
+            }
+        ],
+        "convergence_criteria" : [
+            {
+                "type"          : "relative_norm_previous_residual",
+                "solver"        : "fluid",
+                "data_name"     : "top_disp",
+                "abs_tolerance" : 1e-5,
+                "rel_tolerance" : 1e-5
+            }
+        ],
+        "data_transfer_operators" : {
+            "mapper" : {
+                "type" : "kratos_mapping",
+                "mapper_settings" : {
+                    "mapper_type" : "nearest_neighbor"
                 }
-
-            ],
-            "derivative_list"      : 
-            [
-                {
-                    "from_solver": "structure",
-                    "data_name"  : "front_vel"
-                },
-                {
-                    "from_solver": "structure",
-                    "data_name"  : "top_vel"
-                },
-                {
-                    "from_solver": "structure",
-                    "data_name"  : "back_vel"
-                }
-
-            ]
+            }
         },
-        "convergence_accelerator_settings" :
-        {
-            "type"          : "mvqn",
-            "io_type"       : "kratos_signal",
-            "data_list" :
-            [
-                {
-                    "from_solver"   : "fluid",
-                    "data_name"     : "front_disp"
-                },
-                {
-                    "from_solver"   : "fluid",
-                    "data_name"     : "top_disp"
-                },
-                {
-                    "from_solver"   : "fluid",
-                    "data_name"     : "back_disp"
-                }
-            ]
-        },
-        "convergence_criteria_settings" :
-        {
-            "io_type"   : "kratos_signal",
-            "echo_level": 2,
-            "data_list" :
-            [
-                {
-                    "from_solver"   : "fluid",
-                    "data_name"     : "front_disp",
-                    "abs_tolerance" : 1e-6,
-                    "rel_tolerance" : 1e-4
-                }
-            ]
-        },
-        "coupling_loop":
+        "coupling_sequence":
         [
-        {
-            "name": "fluid",
-            "input_data_list": [
-                {
-                    "from_solver" : "structure",
-                    "data_name"   : "front_disp"
-                },
-                {
-                    "from_solver" : "structure",
-                    "data_name"   : "top_disp"
-                },
-                {
-                    "from_solver" : "structure",
-                    "data_name"   : "back_disp"
-                }
-            ],
-            "output_data_list": [
-                {
-                    "to_solver"   : "structure",
-                    "data_name"   : "front_force"
-                },
-                {
-                    "to_solver"   : "structure",
-                    "data_name"   : "top_force"
-                },
-                {
-                    "to_solver"   : "structure",
-                    "data_name"   : "back_force"
-
-                }
-            ]
-        },
-        {
-            "name": "structure",
-            "output_data_list": [
-                {
-                    "to_solver"   : "fluid",
-                    "data_name"   : "front_disp",
-                    "io_settings"   : {
-                        "mapper_type" : "nearest_neighbor"
+            {
+                "name": "fluid",
+                "input_data_list"  : [],
+                "output_data_list" : []
+            },
+            {
+                "name": "structure",
+                "input_data_list": [
+                    {
+                        "data"             : "front_force",
+                        "from_solver"      : "fluid",
+                        "from_solver_data" : "front_force",
+                        "data_transfer_operator" : "mapper",
+                        "data_transfer_operator_options" : ["swap_sign"]
+                    },
+                    {
+                        "data"             : "top_force",
+                        "from_solver"      : "fluid",
+                        "from_solver_data" : "top_force",
+                        "data_transfer_operator" : "mapper",
+                        "data_transfer_operator_options" : ["swap_sign"]
+                    },
+                    {
+                        "data"             : "back_force",
+                        "from_solver"      : "fluid",
+                        "from_solver_data" : "back_force",
+                        "data_transfer_operator" : "mapper",
+                        "data_transfer_operator_options" : ["swap_sign"]
                     }
-                },
-                {
-                    "to_solver"   : "fluid",
-                    "data_name"   : "top_disp",
-                    "io_settings"   : {
-                        "mapper_type" : "nearest_neighbor"
+                ],
+                "output_data_list": [
+                    {
+                        "data"           : "front_disp",
+                        "to_solver"      : "fluid",
+                        "to_solver_data" : "front_disp",
+                        "data_transfer_operator" : "mapper"
+                    },
+                    {
+                        "data"           : "top_disp",
+                        "to_solver"      : "fluid",
+                        "to_solver_data" : "top_disp",
+                        "data_transfer_operator" : "mapper"
+                    },
+                    {
+                        "data"           : "back_disp",
+                        "to_solver"      : "fluid",
+                        "to_solver_data" : "back_disp",
+                        "data_transfer_operator" : "mapper"
                     }
-                },
-                {
-                    "to_solver"   : "fluid",
-                    "data_name"   : "back_disp",
-                    "io_settings"   : {
-                        "mapper_type" : "nearest_neighbor"
-                    }
-                }
-            ],
-            "input_data_list": [
-                {
-                    "from_solver" : "fluid",
-                    "data_name"   : "front_force",
-                    "io_settings"   : {
-                        "mapper_type" : "nearest_neighbor",
-                        "mapper_args" : ["swap_sign", "conservative"]
-                    }
-                },
-                {
-                    "from_solver" : "fluid",
-                    "data_name"   : "top_force",
-                    "io_settings"   : {
-                        "mapper_type" : "nearest_neighbor",
-                        "mapper_args" : ["add_values", "swap_sign", "conservative"]
-                    }
-                },
-                {
-                    "from_solver" : "fluid",
-                    "data_name"   : "back_force",
-                    "io_settings"   : {
-                        "mapper_type" : "nearest_neighbor",
-                        "mapper_args" : ["add_values", "swap_sign", "conservative"]
-                    }
-                }
-            ]
-        }
+                ]
+            }
         ],
         "solvers" :
         {
             "fluid":
             {
-                "solver_type" : "kratos_fluid",
-                "input_file"  : "ProjectParametersCFD",
-                "io_settings" : {
-                    "io_type"     : "kratos_field",
-                    "echo_level"  : 4
+                "type" : "solver_wrappers.kratos.fluid_dynamics_wrapper",
+                "solver_wrapper_settings" : {
+                    "input_file"  : "ProjectParametersCFD"
                 },
                 "data" : {
                     "front_disp" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Beam_front",
-                        "data_identifier" : "MESH_DISPLACEMENT"
+                        "model_part_name" : "FluidModelPart.NoSlip2D_Beam_front",
+                        "dimension"	 : 2,
+                        "variable_name" : "MESH_DISPLACEMENT"
                     },
                     "top_disp" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Beam_Top",
-                        "data_identifier" : "MESH_DISPLACEMENT"
+                        "model_part_name" : "FluidModelPart.NoSlip2D_Beam_Top",
+                        "dimension"	 : 2,
+                        "variable_name" : "MESH_DISPLACEMENT"
                     },
                     "back_disp" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Beam_back",
-                        "data_identifier" : "MESH_DISPLACEMENT"
+                        "model_part_name" : "FluidModelPart.NoSlip2D_Beam_back",
+                        "dimension"	 : 2,
+                        "variable_name" : "MESH_DISPLACEMENT"
                     },
                     "front_force" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Beam_front",
-                        "data_identifier" : "REACTION"
+                        "model_part_name" : "FluidModelPart.NoSlip2D_Beam_front",
+                        "dimension"	 : 2,
+                        "variable_name" : "REACTION"
                     },
                     "top_force" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Beam_Top",
-                        "data_identifier" : "REACTION"
+                        "model_part_name" : "FluidModelPart.NoSlip2D_Beam_Top",
+                        "dimension"	 : 2,
+                        "variable_name" : "REACTION"
                     },
                     "back_force" : {
-                        "geometry_name" : "FluidModelPart.NoSlip2D_Beam_back",
-                        "data_identifier" : "REACTION"
+                        "model_part_name" : "FluidModelPart.NoSlip2D_Beam_back",
+                        "dimension"	 : 2,
+                        "variable_name" : "REACTION"
                     }
                 }
             },
             "structure" :
             {
-                "solver_type" : "kratos_structural",
-                "input_file"  : "ProjectParametersCSM",
-                "io_settings" : {
-                    "io_type"     : "kratos_field",
-                    "echo_level"  : 4
+                "type" : "solver_wrappers.kratos.structural_mechanics_wrapper",
+                "solver_wrapper_settings" : {
+                    "input_file"  : "ProjectParametersCSM"
                 },
                 "data" : {
                     "front_disp" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "DISPLACEMENT"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "DISPLACEMENT"
                     },
                     "top_disp" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "DISPLACEMENT"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "DISPLACEMENT"
                     },
                     "back_disp" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "DISPLACEMENT"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "DISPLACEMENT"
                     },
                     "front_force" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "POINT_LOAD"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "POINT_LOAD"
                     },
                     "top_force" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "POINT_LOAD"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "POINT_LOAD"
                     },
                     "back_force" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "POINT_LOAD"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "POINT_LOAD"
                     },
                     "front_vel" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "VELOCITY"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "VELOCITY"
                     },
                     "top_vel" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "VELOCITY"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "VELOCITY"
                     },
                     "back_vel" : {
-                        "geometry_name" : "Structure.GENERIC_Beam",
-                        "data_identifier" : "VELOCITY"
+                        "model_part_name" : "Structure.GENERIC_Beam",
+                        "dimension"	 : 3,
+                        "variable_name" : "VELOCITY"
                     }
                 }
             }
