--- a/neural_network/cosim/pure_sdof/neural_network_training/CNNLSTMProjectParameters.json
+++ b/neural_network/cosim/pure_sdof/neural_network_training/CNNLSTMProjectParameters.json
@@ -29,7 +29,10 @@
             "parameters"   :{
                 "lookback"	   : 3,
                 "input_log_name"  : "input_preprocessing.json",
-                "output_log_name" : "output_preprocessing.json"
+                "output_log_name" : "output_preprocessing.json",
+                "timesteps_as_features": false,
+                "features_as_timesteps": true,
+                "record"               : false
             }
         },
         {
@@ -38,7 +41,7 @@
             "parameters"   :{
                 "input_file_name"          : "data//training_in",
                 "output_file_name"         : "data//training_out",
-                "format"                   : "npy",
+                "format"                   : "pkl",
                 "input_log_name" 	    : "input_preprocessing.json",
                 "output_log_name" 	    : "output_preprocessing.json"
             }
@@ -53,7 +56,7 @@
             "layer_type"          : "input_layer",
             "layer_parameters"    :{
             "layer_name"          : "input",
-                "data_input"      : "data//training_in.npy",
+                "data_input"      : "data//training_in.pkl",
                 "input_to_recurrent": true    
             }  
         }},
@@ -118,7 +121,7 @@
             "layer_type"                   : "dense_layer",
             "layer_parameters"             :{
                 "output_layer"	     : true,
-                "data_output"		     : "data//training_out.npy",
+                "data_output"		     : "data//training_out.pkl",
                 "activation"		     : "linear"
         }}},  
         {
@@ -164,10 +167,10 @@
         "python_module" : "train_saved_model_process",
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
-            "data_input"          : "data//training_in.npy",
-            "data_output"         : "data//training_out.npy",
+            "data_input"          : "data//training_in.pkl",
+            "data_output"         : "data//training_out.pkl",
             "model"              : "my_model",
-            "epochs"             : 10000,
+            "epochs"             : 1000,
             "shuffle"	          : true,
             "recurrent"          : true,
             "training_log"       : true,
@@ -192,8 +195,8 @@
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
             "model"               : "my_model",
-            "input_file"          : "data/training_in.npy",
-            "target_file"         : "data/training_out.npy",
+            "input_file"          : "data/training_in.pkl",
+            "target_file"         : "data/training_out.pkl",
             "timesteps"           : 1000,
             "lookback"            : 3,
             "echo"                : 1,
@@ -205,7 +208,7 @@
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
             "predictions_file"    : "data//predictions.npy",
-            "target_file"         : "data//training_out.npy",
+            "target_file"         : "data//training_out.pkl",
             "input_variable"      : "Time",
             "variables"           : ["Displacement_Y"],
             "axis"                : "plot",
