--- a/contact_structural_mechanics/use_cases/in_ring/source/ProjectParameters.json
+++ b/contact_structural_mechanics/use_cases/in_ring/source/ProjectParameters.json
@@ -79,6 +79,7 @@
                 "model_part_name" : "Structure.SelfWeight3D_Self_weight_Auto1",
                 "variable_name"   : "VOLUME_ACCELERATION",
                 "modulus"         : 9.81,
+                "constrained"     : false,
                 "direction"       : [0.0,-1.0,0.0],
                 "interval"        : [0.0,"End"]
             }
