--- a/neural_network/cosim/mok_fsi/surrogate_fluid/only_fluid/CNNLSTMProjectParameters.json
+++ b/neural_network/cosim/mok_fsi/surrogate_fluid/only_fluid/CNNLSTMProjectParameters.json
@@ -42,15 +42,7 @@
                 "record"               : true
             }
         },
-        {
-            "python_module": "reorder_process",
-            "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
-            "parameters"   :{
-                "number_of_partitions"   : 4,
-                "input_log_name"  : "input_preprocessing.json",
-                "output_log_name" : "output_preprocessing.json"
-            }
-        },
+
 
         {
             "python_module": "save_data_process",
@@ -95,8 +87,22 @@
         "parameters"    :{
             "layer_type"          : "conv3d_layer",
             "layer_parameters"    :{
-            "filters"             : 256,
+            "filters"             : 128,
             "kernel_size_1"	  : 5,
+            "kernel_size_2"	  : 1,
+            "kernel_size_3"	  : 4,
+            "padding"		  : "same",
+            "activation"	  : "relu"
+        }  
+        }},        
+        {
+        "python_module" : "add_layer_process",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "layer_type"          : "conv3d_layer",
+            "layer_parameters"    :{
+            "filters"             : 256,
+            "kernel_size_1"	  : 4,
             "kernel_size_2"	  : 1,
             "kernel_size_3"	  : 4,
             "padding"		  : "valid",
@@ -109,14 +115,15 @@
         "parameters"    :{
             "layer_type"          : "reshape_layer",
             "layer_parameters"    :{
-            	"new_shape": [6, 203, 256,1]    
+            	"new_shape": [7, 203, 256,1]    
             }  
         }}, 
+        
         {
         "python_module" : "add_layer_process",
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
-            "layer_type"          : "maxpooling3d_layer",
+            "layer_type"          : "averagepooling3d_layer",
             "layer_parameters"    :{
             	"pool_size_1"              : 1,
             	"pool_size_2"              : 1,
@@ -129,7 +136,7 @@
         "parameters"    :{
             "layer_type"          : "reshape_layer",
             "layer_parameters"    :{
-            	"new_shape": [6, 203]    
+            	"new_shape": [7, 203]    
             }  
         }}, 
         {
@@ -140,15 +147,17 @@
             "layer_parameters"    :{
             "units"         	   : 128,
             "return_sequences"    : true
+
         }  
         }},
+
         {
         "python_module" : "add_layer_process",
         "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
         "parameters"    :{
             "layer_type"          : "lstm_layer",
             "layer_parameters"    :{
-            "units"         	   : 32
+            "units"         	   : 64
         }  
         }},
         
@@ -226,5 +235,96 @@
         }}]
     },
     "output_processes":{
-        "output_processes":[]}
+        "output_processes":[{
+        "python_module" : "history_plotter_process",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "history_file"               : "history.dat",
+            "variables"                  : ["mean_squared_error"],
+            "output_format"              : "png",
+            "output_name"                : "training_plot",
+            "axis"                       : "semilogx",
+            "burn_up"                    : 3,
+            "show"			  : false
+        }},
+        {
+        "python_module" : "testing_timeseries_process",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "model"               : "my_model",
+            "input_file"          : "data/training_in.pkl",
+            "target_file"         : "data/training_out.pkl",
+            "timesteps"           : 250,
+            "lookback"            : 8,
+            "echo"                : 1,
+            "predictions_file"    : "data/predictions",
+            "save_format"         : "npy"            
+        }},
+        {
+        "python_module" : "invert_transformations_process",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "echo"                : 1,
+            "input_file"	   : "data//training_in.pkl",
+            "predictions_file"    : "data//predictions.npy",
+            "input_file_name"	   : "data//input_corrected",
+            "output_file_name"    : "data//output_corrected",
+            "save_format"	   : "npy"            
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out.pkl",
+            "input_variable"      : "Timesteps",
+            "variables"           : ["Displacement_X [m]","Displacement_Y [m]"],
+            "axis"                : "plot",
+            "node_id"		   : 50,
+            "training_timesteps"  : 150,
+            "output_name"         : "mok_fsi_node_50",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out.pkl",
+            "input_variable"      : "Timesteps",
+            "variables"           : ["Displacement_X [m]","Displacement_Y [m]"],
+            "axis"                : "plot",
+            "node_id"		   : 100,
+            "training_timesteps"  : 150,
+            "output_name"         : "mok_fsi_node_100",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out.pkl",
+            "input_variable"      : "Timesteps",
+            "variables"           : ["Displacement_X [m]","Displacement_Y [m]"],
+            "axis"                : "plot",
+            "node_id"		   : 150,
+            "training_timesteps"  : 150,
+            "output_name"         : "mok_fsi_node_150",
+            "output_format"       : "png"          
+        }},
+        {
+        "python_module" : "prediction_timeseries_plotter",
+        "kratos_module" : "KratosMultiphysics.NeuralNetworkApplication",
+        "parameters"    :{
+            "predictions_file"    : "data//output_corrected.npy",
+            "target_file"         : "data//training_out.pkl",
+            "input_variable"      : "Timesteps",
+            "variables"           : ["Displacement_X [m]","Displacement_Y [m]"],
+            "axis"                : "plot",
+            "node_id"		   : 32,
+            "training_timesteps"  : 150,
+            "output_name"         : "mok_fsi_node_32",
+            "output_format"       : "png"          
+        }}]}
 }
