--- a/neural_network/cosim/mok_fsi/surrogate_structure/mok_fsi_CSM_solids_original/project_parameters_cosim_mok_fsi_strong.json
+++ b/neural_network/cosim/mok_fsi/surrogate_structure/mok_fsi_CSM_solids_original/project_parameters_cosim_mok_fsi_strong.json
@@ -22,7 +22,7 @@
         ],
         "convergence_accelerators" : [
             {
-                "type"      : "aitken",
+                "type"      : "mvqn",
                 "solver"    : "fluid",
                 "data_name" : "disp"
             }
@@ -52,7 +52,7 @@
                 "output_data_list" : []
             },
             {
-                "name": "neural_network",
+                "name": "structure",
                 "input_data_list": [
                     {
                         "data"             : "load",
@@ -98,37 +98,22 @@
                     }
                 }
             },
-            "neural_network" :
+            "structure" :
             {
-                "type" : "solver_wrappers.kratos.neural_network_with_mdpa_wrapper",
+                "type" : "solver_wrappers.kratos.structural_mechanics_wrapper",
                 "solver_wrapper_settings" : {
-                    "input_file"  : "ProjectParametersNeuralNetwork",
-                    "input_variable" : "load",
-                    "output_variable": "disp",
-                    "input_variable_name" : "FORCE",
-                    "dimension_input"     : 2,
-                    "output_variable_name": "DISPLACEMENT",
-                    "mdpa_file_name" : "Mok_CSM",
-                    "submodel_part_name":"GENERIC_FSI",
-                    "lookback"       : 10,
-                    "reorder_partitions": 4,
-                    "features_as_timesteps": false,
-                    "record"		: true,
-                    "only_input"	: false,
-                    "time_buffer"	: 4
+                    "input_file"  : "ProjectParametersCSM"
                 },
                 "data" : {
                     "disp" : {
-                        "model_part_name" : "NeuralNetwork.GENERIC_FSI",
-                        "variable_name" : "DISPLACEMENT",
-                        "location"      : "node_historical",
-                        "dimension"     : 2
+                        "model_part_name"   : "Structure.GENERIC_FSI",
+                        "dimension" : 2,
+                        "variable_name" : "DISPLACEMENT"
                     },
                     "load" : {
-                        "model_part_name" : "NeuralNetwork.GENERIC_FSI",
-                        "variable_name" : "FORCE",
-                        "location"      : "node_historical",
-                        "dimension"     : 2
+                        "model_part_name"   : "Structure.GENERIC_FSI",
+                        "dimension" : 2,
+                        "variable_name" : "POINT_LOAD"
                     }
                 }
             }
