--- a/neural_network/cosim/mok_fsi/surrogate_structure/mok_fsi_CSM_solids_NN/ProjectParametersCFD.json
+++ b/neural_network/cosim/mok_fsi/surrogate_structure/mok_fsi_CSM_solids_NN/ProjectParametersCFD.json
@@ -203,7 +203,7 @@
 		 "write_deformed_configuration"	:true,
                 "output_path"                        : "vtk_output_mok_fsi_cfd",
                 "save_output_files_in_folder"        : true,
-                "nodal_solution_step_data_variables" : ["VELOCITY","PRESSURE","MESH_DISPLACEMENT","MESH_VELOCITY"]
+                "nodal_solution_step_data_variables" : ["VELOCITY","PRESSURE","MESH_DISPLACEMENT","MESH_VELOCITY","REACTION"]
             }
         }]
      }
