--- a/neural_network/cosim/mok_fsi/surrogate_structure/mok_fsi_CSM_solids_NN/ProjectParametersNeuralNetwork.json
+++ b/neural_network/cosim/mok_fsi/surrogate_structure/mok_fsi_CSM_solids_NN/ProjectParametersNeuralNetwork.json
@@ -13,17 +13,17 @@
         "input_variables"          : ["POINT_LOAD_X", "POINT_LOAD_Y"],
         "input_sources"            : ["solution_step","solution_step"],
         "input_model_part"         : "Structure.GENERIC_FSI",
-        "input_order"		: "sources_first",
+        "input_order"		: "variables_first",
         "output_variables"         : ["DISPLACEMENT_X","DISPLACEMENT_Y"],
         "output_sources"           : ["solution_step","solution_step"],
-        "output_order"		: "sources_first",
+        "output_order"		: "variables_first",
         "lookback"       : 10,
         "reorder_partitions": 4,
         "domain_size"    : 2,
         "timesteps_as_features": false,
         "record"		: true,
         "only_input"	: false,
-        "time_buffer"	: 0.4,
+        "time_buffer"	: 0.5,
         "timestep"     : 0.1,
         "start_time"    : 0.0,
         "end_time"      : 20.0,
@@ -94,7 +94,16 @@
                 "output_log_name"  : "../only_structure/output_preprocessing.json"
             }
         },
-
+	{
+            "python_module": "mask_zeros_process",
+            "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
+            "parameters"   :{
+                "objective": "input",
+                "load_from_log": true,
+                "input_log_name"  : "../only_structure/output_preprocessing.json",
+                "invert": false
+            }
+        },
         {
             "python_module": "normalization_process",
             "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
