--- a/neural_network/cosim/mok_fsi/surrogate_structure/only_structure/CNNLSTMProjectParameters_new.json
+++ b/neural_network/cosim/mok_fsi/surrogate_structure/only_structure/CNNLSTMProjectParameters_new.json
@@ -22,6 +22,15 @@
             }
         },
         {
+            "python_module": "mask_zeros_process",
+            "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
+            "parameters"   :{
+                "objective": "input",
+                "load_from_log": true,
+                "input_log_name"  : "output_preprocessing.json"
+            }
+        },
+        {
             "python_module": "normalization_process",
             "kratos_module": "KratosMultiphysics.NeuralNetworkApplication",
             "parameters"   :{
@@ -123,7 +132,7 @@
         "parameters"    :{
             "layer_type"          : "reshape_layer",
             "layer_parameters"    :{
-            	"new_shape": [6, 203, 256,1]    
+            	"new_shape": [6, 202, 256,1]    
             }  
         }}, 
         
@@ -144,7 +153,7 @@
         "parameters"    :{
             "layer_type"          : "reshape_layer",
             "layer_parameters"    :{
-            	"new_shape": [6, 203]    
+            	"new_shape": [6, 202]    
             }  
         }}, 
         {
