--- a/neural_network/cosim/mok_fsi/surrogate_structure/only_structure/ProjectParametersCSM.json
+++ b/neural_network/cosim/mok_fsi/surrogate_structure/only_structure/ProjectParametersCSM.json
@@ -88,7 +88,7 @@
                 "model_part_name"                    : "Structure",
                 "file_format"                        : "binary",
                 "output_sub_model_parts"             : false,
-                "write_deformed_configuration"		 : true,
+                "write_deformed_configuration"		 : false,
                 "output_interval"                    : 1,
                 "nodal_solution_step_data_variables" : ["DISPLACEMENT","ROTATION","POINT_LOAD","POINT_MOMENT"],
                 "gauss_point_variables_extrapolated_to_nodes" : []
