--- a/neural_network/cosim/mok_fsi/surrogate_structure_legacy/mok_fsi_CSM_solids_NN/ProjectParametersNeuralNetwork.json
+++ b/neural_network/cosim/mok_fsi/surrogate_structure_legacy/mok_fsi_CSM_solids_NN/ProjectParametersNeuralNetwork.json
@@ -45,8 +45,7 @@
                 "load_from_log"   : true,
                 "input_log_name"  : "../only_structure/input_preprocessing.json",
                 "output_log_name" : "../only_structure/output_preprocessing.json",
-                "normalization_type": "soft_zero_one",
-                "invert": false
+                "normalization_type": "soft_zero_one"
             }
         
         }
